--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "arogya2",
+  "name": "server",
   "version": "1.0.0",
-  "private": true,
-  "type": "module",
+  "description": "",
+  "main": "groq.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "bootstrap": "^5.3.8",
-    "groq-sdk": "^0.37.0",
-    "jspdf": "^3.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@vitejs/plugin-react": "^5.1.2",
-    "vite": "^7.2.4"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "groq-sdk": "^0.37.0"
   }
 }
